# spark-playground

./: .gitignore  README.md  pyproject.toml
dags/: spark_analysis_queries_dag.py  spark_dag.py  spark_test_dag.py
docker/: Dockerfile  docker-compose.yaml  requirements.txt
docker/docker-airflow/: Dockerfile  requirements.txt
docker/docker-airflow/postgres/: init-test-db.sh
spark-playground/app/: read_postgres.py  stream_tweets.py
spark/app/: load_postgres.py  netflix.py  netflix_queries.py  read_postgres.py
spark/app/queries/: count_movies_by_year.py  count_records_by_genre.py
spark/resources/data/: netflix.csv
